--- a/My-App/src/src/app/globals.css
+++ b/My-App/src/src/app/globals.css
@@ -27,6 +27,7 @@ h1 {
   font-size: 50px;
   text-align: center;
   padding: 2%;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 .container {
   max-width: 1000px; /* Slightly wider for better readability */
@@ -42,10 +43,11 @@ section {
   background: white; /* Solid white for contrast */
   padding: 15px;
   margin: 20px 0; /* Space between sections */
-  border: 8px solid #7bde76; /* Green left border */
+  border: 8px solid #ceffcc; /* Green left border */
   border-radius: 12px; /* Curved edges */
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Light shadow for depth */
 }
+
 
 .game-container {
   font-family: "Space Mono", serif;
@@ -70,16 +72,18 @@ section {
   padding: 20px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 20px;
-  border: 4px solid #7bde76;
+  border: 4px solid #c9f5c7;;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
 
 .question-image {
-  max-width: 700px; /* Make the question image smaller */
+  /* max-width: 700px; Make the question image smaller */
   height: auto;
   margin: 20px auto;
   display: block;
+ 
+
 }
 
 .options-container {
@@ -124,7 +128,7 @@ section {
   background: white; /* Solid white for contrast */
   padding: 25px;
   margin: 20px 0; /* Space between sections */
-  border: 8px solid #7bde76; /* Green left border */
+  border: 8px solid  #ceffcc; /* Green left border */
   border-radius: 12px; /* Curved edges */
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   font-size: 30px;
